--- a/adminFrontend/templates/index.html
+++ b/adminFrontend/templates/index.html
@@ -1,12 +1,16 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html :class="{ 'theme-dark': dark }" x-data="data()" lang="en">
+<html :class="{ 'theme-dark': {% block darkLight %}dark{% endblock darkLight %} }" x-data="data()" lang="en">
+
 
 <head>
+  {% block headLinks %}
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> {% block siteTitle %}EasyImmo AdminBoard{% endblock siteTitle %}</title>
+  
+  
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href=" {% static 'assets/css/tailwind.output.css' %} " />
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
@@ -15,11 +19,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" defer></script>
   <script src="{% static 'assets/js/charts-lines.js' %}" defer></script>
   <script src="{% static 'assets/js/charts-pie.js' %}" defer></script>
+  {% endblock headLinks %}
+ 
 </head>
 
 <body>
-  <div class="flex h-screen bg-gray-50 dark:bg-gray-900" :class="{ 'overflow-hidden': isSideMenuOpen }">
+  <div class="flex h-screen bg-gray-50 dark:bg-gray-900 overflow-visible"  :class="{ 'overflow-hidden': isSideMenuOpen }">
     <!-- Desktop sidebar -->
+    {% block sideBar %}
     <aside class="z-20 hidden w-64 overflow-y-auto bg-white dark:bg-gray-800 md:block flex-shrink-0">
       <div class="py-4 text-gray-500 dark:text-gray-400">
         <a class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200" href="#">
@@ -330,7 +337,9 @@
         </div>
       </div>
     </aside>
+    {% endblock sideBar %}
     <div class="flex flex-col flex-1 w-full">
+      {% block header %}
       <header class="z-10 py-4 bg-white shadow-md dark:bg-gray-800">
         <div
           class="container flex items-center justify-between h-full px-6 mx-auto text-purple-600 dark:text-purple-300">
@@ -479,8 +488,12 @@
           </ul>
         </div>
       </header>
+      {% endblock header %}
+      
+       {% block main %}
       <main class="h-full overflow-y-auto">
-        <div class="container px-6 mx-auto grid">
+        <div class="container px-6 mx-auto grid overflow-visible">
+         
           {% block sectionName %}
           <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
             Dashboard
@@ -958,7 +971,7 @@
             </div>
           </div>
           {% endblock userSection %}
-          {% block Charts %}
+          {% block charts %}
                     <!-- Charts -->
           <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
             Charts
@@ -1003,9 +1016,12 @@
               </div>
             </div>
           </div>
-          {% endblock Charts %}
+          {% endblock charts %}
+
+        
         </div>
       </main>
+       {% endblock main %} 
     </div>
   </div>
 </body>
