--- a/adminFrontend/templates/notifications.html
+++ b/adminFrontend/templates/notifications.html
@@ -1,1 +1,146 @@
-{% extends "index.html" %}
+{% extends "base.html" %} {% block blankBody %}
+<main class="flex h-full  justify-center pb-[5rem]  overflow-y-auto">
+  <!-- tabs -->
+  <div class="tabs flex  flex-col w-full h-[full] md:w-[80%] mt-[4rem]">
+    <!-- tabs header -->
+    <div
+      class="relative flex flex-row items-center border-b-2 border-gray-200 dark:border-gray-700"
+      style="
+        background: rgba(255, 255, 255, 0.62);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(8.8px);
+        -webkit-backdrop-filter: blur(8.8px);
+        border: 1px solid rgba(255, 255, 255, 0.26);
+      "
+    >
+      <a
+        data-type="tabs"
+        data-target="tab-4"
+        href="{% url 'propertiesNotification' %}"
+        class="active flex-1 h-16 px-4 flex flex-col justify-center items-center gap-1 relative py-2 hover:bg-surface-100 dark:hover:bg-surfacedark-100 text-gray-700 dark:text-gray-300"
+      >
+        <span class="material-symbols-outlined text-black font-bold"
+          >Properties Notifications</span
+        >
+        <p class="text-sm tracking-[.00714em] text-black font-bold">
+          verify properties
+        </p>
+      </a>
+      <a
+        data-type="tabs"
+        data-target="tab-5"
+        href="{% url 'usersNotification' %}"
+        class="flex-1 h-16 px-4 flex flex-col justify-center items-center gap-1 relative py-2 hover:bg-surface-100 dark:hover:bg-surfacedark-100 text-gray-700 dark:text-gray-300"
+      >
+        <span class="material-symbols-outlined text-black font-bold"
+          >Users Notifications</span
+        >
+        <p class="text-sm tracking-[.00714em] text-black font-bold">
+          verify users
+        </p>
+      </a>
+      <hr />
+      <br />
+      <!-- indicator -->
+      <div
+        role="indicator"
+        class="absolute bottom-0 transition-all duration-200 ease-in-out bg-gray-500 dark:bg-primary-200 h-[0.4rem] rounded-t-full"
+      ></div>
+    </div>
+
+    {% block content %}
+    <table class="w-full mt-[4%] rounded-lg whitespace-no-wrap">
+      <thead>
+        <tr
+          class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800"
+        >
+          <th class="px-4 py-3">Client</th>
+          <th class="px-4 py-3">Amount</th>
+          <th class="px-4 py-3">Status</th>
+          <th class="px-4 py-3">Date</th>
+          <th class="px-4 py-3">Actions</th>
+        </tr>
+      </thead>
+      <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
+        {% for property in properties %}
+        <tr class="text-gray-700 dark:text-gray-400">
+          <td class="px-4 py-3">
+            <div class="flex items-center text-sm">
+              <!-- Avatar with inset shadow -->
+              <div class="relative hidden w-8 h-8 mr-3 rounded-full md:block">
+                <img
+                  class="object-cover w-full h-full rounded-full"
+                  src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&fit=max&ixid=eyJhcHBfaWQiOjE3Nzg0fQ"
+                  alt=""
+                  loading="lazy"
+                />
+                <div
+                  class="absolute inset-0 rounded-full shadow-inner"
+                  aria-hidden="true"
+                ></div>
+              </div>
+              <div>
+                <p class="font-semibold">{{ property.PropertyName }}</p>
+                <p class="text-xs text-gray-600 dark:text-gray-400">
+                  {{ property.PropertyType }}
+                </p>
+              </div>
+            </div>
+          </td>
+          <td class="px-4 py-3 text-sm">{{ property.PropertyPrice }}</td>
+          <td class="px-4 py-3 text-xs">
+            <span
+              class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100"
+            >
+              Approved
+            </span>
+          </td>
+          <td class="px-4 py-3 text-sm">6/10/2020</td>
+          <td class="px-4 py-3">
+            <div class="flex items-center space-x-4 text-sm">
+              <a
+                class="flex items-center justify-between px-2 py-2 text-sm font-medium leading-5 text-purple-600 rounded-lg dark:text-gray-400 focus:outline-none focus:shadow-outline-gray"
+                aria-label="Edit"
+                href=""
+              >
+                <svg
+                  class="w-5 h-5"
+                  aria-hidden="true"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                >
+                  <path
+                    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                class="flex items-center justify-between px-2 py-2 text-sm font-medium leading-5 text-purple-600 rounded-lg dark:text-gray-400 focus:outline-none focus:shadow-outline-gray"
+                aria-label="Delete"
+                href=""
+              >
+                <svg
+                  class="w-5 h-5"
+                  aria-hidden="true"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {% endblock content %}
+  </div>
+</main>
+
+{% endblock blankBody %}
